--- a/data/data_preprocessing.ipynb
+++ b/data/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,11 +24,13 @@
     "    print(path, \" - \", csv.shape)\n",
     "    \n",
     "    conso_by_day = csv[\"Consommation\"].resample('D').sum()\n",
+    "    co2_by_day = csv[\"Taux de Co2\"].resample('D').sum()\n",
     "    conso_df = conso_by_day.to_frame()\n",
     "    conso_df[\"Date\"] = conso_df.index\n",
     "    conso_df[\"Jour\"] = conso_df[\"Date\"].dt.day\n",
     "    conso_df[\"Mois\"] = conso_df[\"Date\"].dt.month\n",
     "    conso_df[\"Année\"] = conso_df[\"Date\"].dt.year\n",
+    "    conso_df[\"CO2\"] = co2_by_day\n",
     "    \n",
     "    conso_df.to_csv(\"conso_by_day_%i.csv\" % year)\n",
     "    \n",
@@ -37,20 +39,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "edf_mix_2012.csv  -  (17249, 36)\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/lpregniard/.conda/envs/data_science/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3254: DtypeWarning: Columns (18,19,20,21,22) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  if (await self.run_code(code, result,  async_=asy)):\n",
       "/Users/lpregniard/.conda/envs/data_science/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3254: DtypeWarning: Columns (18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  if (await self.run_code(code, result,  async_=asy)):\n"
      ]
@@ -59,6 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "edf_mix_2012.csv  -  (17249, 36)\n",
       "edf_mix_2013.csv  -  (17495, 36)\n",
       "edf_mix_2014.csv  -  (17519, 36)\n"
      ]
@@ -78,6 +76,13 @@
     "    \n",
     "pd.concat(csvs).to_csv(\"conso_by_day_total.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
