--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,8 @@
     "    conso_df[\"Mois\"] = conso_df[\"Date\"].dt.month\n",
     "    conso_df[\"Année\"] = conso_df[\"Date\"].dt.year\n",
     "    conso_df[\"CO2_moy\"] = co2_by_day\n",
-    "    conso_df[\"CO2\"] = conso_df[\"CO2_moy\"]*conso_df[\"Consommation\"]/1000000\n",
+    "    conso_df[\"CO2\"] = np.floor(conso_df[\"CO2_moy\"]*conso_df[\"Consommation\"]/1000000)\n",
+    "    conso_df[\"CO2\"] = conso_df[\"CO2\"].astype(\"int\")\n",
     "    conso_df.to_csv(\"data/conso_by_day_%i.csv\" % year)\n",
     "    \n",
     "    return conso_df"
@@ -39,19 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lpregniard/.conda/envs/data_science/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3254: DtypeWarning: Columns (18,19,20,21,22) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  if (await self.run_code(code, result,  async_=asy)):\n",
-      "/Users/lpregniard/.conda/envs/data_science/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3254: DtypeWarning: Columns (18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  if (await self.run_code(code, result,  async_=asy)):\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -74,7 +66,7 @@
     "for p, y in zip(paths, years):\n",
     "    csvs.append(transform_raw_csv_to_daily(p, y))\n",
     "    \n",
-    "pd.concat(csvs).to_csv(\"conso_by_day_total.csv\")"
+    "pd.concat(csvs).to_csv(\"data/conso_by_day_total.csv\")"
    ]
   },
   {
