--- a/python/data_preprocessing.ipynb
+++ b/python/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,9 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lpregniard/.conda/envs/data_science/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3254: DtypeWarning: Columns (18,19,20,21,22) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  if (await self.run_code(code, result,  async_=asy)):\n",
+      "/Users/lpregniard/.conda/envs/data_science/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3254: DtypeWarning: Columns (18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  if (await self.run_code(code, result,  async_=asy)):\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
